# stdexec

./: .clangd  .gitignore  CMakeLists.txt
.github/workflows/: ci.cpu.yml
docs/netexecdocs/: architecture.md  feature.md  plan.md
docs/netexecdocs/iocp/: iocp_accept_fix.md  iocp_accept_overlap_fixed.cpp  iocp_accept_overlap_repro.cpp
docs/netexecdocs/iocp/iocptest/: build.bat  iocp_blocking.cpp  iocp_nonblocking_inline.cpp  iocp_schemes.md  iocp_skip_sync.cpp  iocp_sync_completion_fix.md  main.cpp
docs/netexecdocs/issues/: issue-async-initiate.en.md  issue-async-initiate.zh.md
docs/netexecdocs/netexec/: netexec-two-layer-api-plan.zh.md  taps port plan.md  taps-api-layer-examples.en.md  taps-api-layer-examples.zh.md  taps-api-reference.en.md  taps-api-reference.zh.md
docs/netexecdocs/proposals/: p3482r1.en.md  p3482r1.zh.md  submit-cpp-proposal.zh.md
examples/: CMakeLists.txt
examples/netexec/: CMakeLists.txt  cat_image_server.cpp  client.cpp  counting_scope_server.cpp  cppcon-2024.cpp  generate_dev_certs.py  http-munich.cpp  http-server.cpp  http-warwick.cpp  https-server-trusted.cpp  https-server.cpp  let_async_scope_server.cpp  milano.cpp  server.cpp  simple_echo_server.cpp  taps.cpp
examples/netexec/data/: index-milano.html  index-munich.html  index-warwick.html  index.html
include/exec/: sequence_senders.hpp  static_thread_pool.hpp  task.hpp
include/netexec/: buffer.hpp  internet.hpp  io_context.hpp  net.hpp  netexec.hpp  operations.hpp  scope.hpp  socket.hpp  task.hpp  timer.hpp
include/netexec/__detail/: basic_socket.hpp  basic_socket_acceptor.hpp  basic_stream_socket.hpp  buffer.hpp  container.hpp  context_base.hpp  endpoint.hpp  event_type.hpp  execution.hpp  get_io_handle.hpp  get_scope_token.hpp  initiate.hpp  internet.hpp  into_expected.hpp  io_base.hpp  io_context.hpp  io_context_scheduler.hpp  iocp_context.hpp  listen.hpp  local_endpoint.hpp  netexec_detail.hpp  netfwd.hpp  operations.hpp  platform.hpp  poll_context.hpp  preconnection.hpp  remote_endpoint.hpp  rendezvous.hpp  repeat_effect_until.hpp  scope.hpp  security_props.hpp  sender.hpp  socket_base.hpp  socket_category.hpp  sorted_list.hpp  stop_token.hpp  task.hpp  timer.hpp  transport_preference.hpp  transport_props.hpp  (+1 more)
include/netexec/net/: buffer.hpp  io_context.hpp  message.hpp  operations.hpp  properties.hpp  timer.hpp  tls.hpp
include/netexec/net/ip/: address.hpp
include/netexec/net/ip/tcp/: operations.hpp  socket.hpp
include/netexec/net/tls/: acceptor.hpp  context.hpp  operations.hpp  preconnection.hpp  stream.hpp
include/netexec/net/tls/__detail/: mbedtls_tls.hpp  openssl_tls.hpp  schannel_tls.hpp  (+6 more)
include/nvexec/stream/: sync_wait.cuh
include/stdexec/: execution.hpp
include/stdexec/__detail/: __affine.hpp  __completion_behavior.hpp  __env.hpp  __let_async_scope.hpp  __parallel_scheduler.hpp  __queries.hpp  __schedule_from.hpp  __sender_concepts.hpp  __stopped_as_optional.hpp  __sync_wait.hpp  __transfer_just.hpp  __transform_sender.hpp
test/: CMakeLists.txt
test/exec/: test_any_sender.cpp  test_static_thread_pool.cpp
test/netexec/: CMakeLists.txt  test_helpers.hpp  test_let_async_scope.cpp  test_netexec_acceptor.cpp  test_netexec_basic.cpp  test_netexec_cancellation.cpp  test_netexec_concurrency.cpp  test_netexec_connect.cpp  test_netexec_context.cpp  test_netexec_endpoint.cpp  test_netexec_errors.cpp  test_netexec_iocp_specific.cpp  test_netexec_poll_specific.cpp  test_netexec_resolve.cpp  test_netexec_send_receive.cpp  test_netexec_timer.cpp  test_netexec_tls.cpp  test_netexec_udp.cpp
test/nvexec/: common.cuh
test/stdexec/algos/adaptors/: test_stopped_as_optional.cpp
test/stdexec/detail/: test_any.cpp
test/stdexec/schedulers/: test_parallel_scheduler.cpp
test/stdexec/types/: test_task.cpp
test/test_common/: catch2.hpp  receivers.hpp
